Closed Bug 1657509 Opened 5 years ago Closed 4 years ago

Always resolve ReadableStream's tee()'s cancel promise after the stream closes or errors

Categories

(Core :: JavaScript Engine, defect, P2)

defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox89 --- fixed

People

(Reporter: d, Assigned: evilpies)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

See the spec bugfix at https://github.com/whatwg/streams/pull/1039 and web platform tests at https://github.com/web-platform-tests/wpt/pull/24124.

Add Comment

Waldo: Could you take a look?

Flags: needinfo?(jwalden)

sdetar, who is the most actively working on Streams these days?

Flags: needinfo?(sdetar)

Jason, could you take a look at this streams bug?

Flags: needinfo?(sdetar)
Flags: needinfo?(jwalden)
Flags: needinfo?(jorendorff)
Blocks: streams-meta
Component: DOM: Core & HTML → JavaScript Engine
Flags: needinfo?(jorendorff)
Severity: -- → S3
Priority: -- → P2

Seems like the existing step numbers refer to a differently formated spec. I updated the numbers
where I changed something.

Assignee: nobody → evilpies
Status: NEW → ASSIGNED
Pushed by evilpies@gmail.com: https://hg.mozilla.org/integration/autoland/rev/ab0a7a0ee384 Always resolve ReadableStream's tee()'s cancel promise after the stream closes or errors. r=arai
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: