Bug 1657509 - Always resolve ReadableStream's tee()'s cancel promise after the stream closes or errors. r=arai

Seems like the existing step numbers refer to a differently formatted spec. I updated the numbers
where I changed something to match https://streams.spec.whatwg.org/.

Differential Revision: https://phabricator.services.mozilla.com/D109237